--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,6 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false,
-    "types": ["@prisma/client"]
+    "noFallthroughCasesInSwitch": false
   }
 }
